--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
 
         {% if resultado_puntomascotas %}
         <div class="box">
-            <h4 class="title">{{ resultado_puntomascotas.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_puntomascotas.shop }}</h5>
             <p>Nombre: {{ resultado_puntomascotas.nombre }}</p>
             <p>Precio: {{ resultado_puntomascotas.precio }}</p>
             <p>Stock: {{ resultado_puntomascotas.stock }}</p>
@@ -68,7 +68,7 @@
 
         {% if resultado_braloy %}
         <div class="box">
-            <h4 class="title">{{ resultado_braloy.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_braloy.shop }}</h5>
             <p>Nombre: {{ resultado_braloy.nombre }}</p>
             <p>Precio: {{ resultado_braloy.precio }}</p>
             <p>Stock: {{ resultado_braloy.stock }}</p>
@@ -77,7 +77,7 @@
 
         {% if resultado_petslandia %}
         <div class="box">
-            <h4 class="title">{{ resultado_petslandia.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_petslandia.shop }}</h5>
             <p>Nombre: {{ resultado_petslandia.nombre }}</p>
             <p>Precio: {{ resultado_petslandia.precio }}</p>
             <p>Stock: {{ resultado_petslandia.stock }}</p>
@@ -86,7 +86,7 @@
 
         {% if resultado_tusmascotas %}
         <div class="box">
-            <h4 class="title">{{ resultado_tusmascotas.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_tusmascotas.shop }}</h5>
             <p>Nombre: {{ resultado_tusmascotas.nombre }}</p>
             <p>Precio: {{ resultado_tusmascotas.precio }}</p>
             <p>Stock: {{ resultado_tusmascotas.stock }}</p>
@@ -95,7 +95,7 @@
 
         {% if resultado_tusmascotas_full %}
         <div class="box">
-            <h4 class="title">{{ resultado_tusmascotas_full.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_tusmascotas_full.shop }}</h5>
             <p>Nombre: {{ resultado_tusmascotas_full.nombre }}</p>
             <p>Precio: {{ resultado_tusmascotas_full.precio }}</p>
             <p>Stock: {{ resultado_tusmascotas_full.stock }}</p>
@@ -104,7 +104,7 @@
 
         {% if resultado_novapet %}
         <div class="box">
-            <h4 class="title">{{ resultado_novapet.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_novapet.shop }}</h5>
             <p>Nombre: {{ resultado_novapet.nombre }}</p>
             <p>Precio: {{ resultado_novapet.precio }}</p>
             <p>Stock: {{ resultado_novapet.stock }}</p>
@@ -113,7 +113,7 @@
 
         {% if resultado_mlandia %}
         <div class="box">
-            <h4 class="title">{{ resultado_mlandia.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_mlandia.shop }}</h5>
             <p>Nombre: {{ resultado_mlandia.nombre }}</p>
             <p>Precio: {{ resultado_mlandia.precio }}</p>
             <p>Stock: {{ resultado_mlandia.stock }}</p>
@@ -122,7 +122,7 @@
 
         {% if resultado_mlandia_full %}
         <div class="box">
-            <h4 class="title">{{ resultado_mlandia_full.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_mlandia_full.shop }}</h5>
             <p>Nombre: {{ resultado_mlandia_full.nombre }}</p>
             <p>Precio: {{ resultado_mlandia_full.precio }}</p>
             <p>Stock: {{ resultado_mlandia_full.stock }}</p>
@@ -131,7 +131,7 @@
 
         {% if resultado_gpet %}
         <div class="box">
-            <h4 class="title">{{ resultado_gpet.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_gpet.shop }}</h5>
             <p>Nombre: {{ resultado_gpet.nombre }}</p>
             <p>Precio: {{ resultado_gpet.precio }}</p>
             <p>Stock: {{ resultado_gpet.stock }}</p>
@@ -140,7 +140,7 @@
 
         {% if resultado_dgppet %}
         <div class="box">
-            <h4 class="title">{{ resultado_dgppet.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_dgppet.shop }}</h5>
             <p>Nombre: {{ resultado_dgppet.nombre }}</p>
             <p>Precio: {{ resultado_dgppet.precio }}</p>
             <p>Stock: {{ resultado_dgppet.stock }}</p>
@@ -149,7 +149,7 @@
 
         {% if resultado_stgopet %}
         <div class="box">
-            <h4 class="title">{{ resultado_stgopet.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_stgopet.shop }}</h5>
             <p>Nombre: {{ resultado_stgopet.nombre }}</p>
             <p>Precio: {{ resultado_stgopet.precio }}</p>
             <p>Stock: {{ resultado_stgopet.stock }}</p>
@@ -158,7 +158,7 @@
 
         {% if resultado_lira %}
         <div class="box">
-            <h4 class="title">{{ resultado_lira.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_lira.shop }}</h5>
             <p>Nombre: {{ resultado_lira.nombre }}</p>
             <p>Precio: {{ resultado_lira.precio }}</p>
             <p>Stock: {{ resultado_lira.stock }}</p>
@@ -167,7 +167,7 @@
 
         {% if resultado_lira_full %}
         <div class="box">
-            <h4 class="title">{{ resultado_lira_full.shop }} </h4>
+            <h5 class="title is-6">{{ resultado_lira_full.shop }} </h5>
             <p>Nombre: {{ resultado_lira_full.nombre }}</p>
             <p>Precio: {{ resultado_lira_full.precio }}</p>
             <p>Stock: {{ resultado_lira_full.stock }}</p>
@@ -176,7 +176,7 @@
 
         {% if resultado_faunimals %}
         <div class="box">
-            <h4 class="title">{{ resultado_faunimals.shop }}</h4>
+            <h5 class="title is-6">{{ resultado_faunimals.shop }}</h5>
             <p>Nombre: {{ resultado_faunimals.nombre }}</p>
             <p>Precio: {{ resultado_faunimals.precio }}</p>
             <p>Stock: {{ resultado_faunimals.stock }}</p>
@@ -185,7 +185,7 @@
 
         {% if resultado_manchasSofi %}
         <div class="box">
-            <h4 class="title">{{ resultado_manchasSofi.shop }} </h4>
+            <h5 class="title is-6">{{ resultado_manchasSofi.shop }} </h5>
             <p>Nombre: {{ resultado_manchasSofi.nombre }}</p>
             <p>Precio: {{ resultado_manchasSofi.precio }}</p>
             <p>Stock: {{ resultado_manchasSofi.stock }}</p>
@@ -209,7 +209,7 @@
             </div>
         </div>
     </footer>
-    <script src="../static/js/main.js"></script>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
 
 </html>
