feat(app): :sparkles: Boton ver producto encontrado
Se agrega boton para ir a ver el producto encontrado, se agrega user agent para evitar 404

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,6 +63,13 @@
             <p>Nombre: {{ resultado_puntomascotas.nombre }}</p>
             <p>Precio: {{ resultado_puntomascotas.precio }}</p>
             <p>Stock: {{ resultado_puntomascotas.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_puntomascotas.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -72,6 +79,13 @@
             <p>Nombre: {{ resultado_braloy.nombre }}</p>
             <p>Precio: {{ resultado_braloy.precio }}</p>
             <p>Stock: {{ resultado_braloy.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_braloy.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -81,6 +95,13 @@
             <p>Nombre: {{ resultado_petslandia.nombre }}</p>
             <p>Precio: {{ resultado_petslandia.precio }}</p>
             <p>Stock: {{ resultado_petslandia.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_petslandia.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -90,6 +111,13 @@
             <p>Nombre: {{ resultado_tusmascotas.nombre }}</p>
             <p>Precio: {{ resultado_tusmascotas.precio }}</p>
             <p>Stock: {{ resultado_tusmascotas.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_tusmascotas.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -99,6 +127,13 @@
             <p>Nombre: {{ resultado_tusmascotas_full.nombre }}</p>
             <p>Precio: {{ resultado_tusmascotas_full.precio }}</p>
             <p>Stock: {{ resultado_tusmascotas_full.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_tusmascotas_full.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -108,6 +143,13 @@
             <p>Nombre: {{ resultado_novapet.nombre }}</p>
             <p>Precio: {{ resultado_novapet.precio }}</p>
             <p>Stock: {{ resultado_novapet.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_novapet.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -117,6 +159,13 @@
             <p>Nombre: {{ resultado_mlandia.nombre }}</p>
             <p>Precio: {{ resultado_mlandia.precio }}</p>
             <p>Stock: {{ resultado_mlandia.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_mlandia.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -126,6 +175,13 @@
             <p>Nombre: {{ resultado_mlandia_full.nombre }}</p>
             <p>Precio: {{ resultado_mlandia_full.precio }}</p>
             <p>Stock: {{ resultado_mlandia_full.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_mlandia_full.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -135,6 +191,13 @@
             <p>Nombre: {{ resultado_gpet.nombre }}</p>
             <p>Precio: {{ resultado_gpet.precio }}</p>
             <p>Stock: {{ resultado_gpet.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_gpet.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -144,6 +207,13 @@
             <p>Nombre: {{ resultado_dgppet.nombre }}</p>
             <p>Precio: {{ resultado_dgppet.precio }}</p>
             <p>Stock: {{ resultado_dgppet.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_dgppet.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -153,6 +223,13 @@
             <p>Nombre: {{ resultado_stgopet.nombre }}</p>
             <p>Precio: {{ resultado_stgopet.precio }}</p>
             <p>Stock: {{ resultado_stgopet.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_stgopet.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -162,6 +239,13 @@
             <p>Nombre: {{ resultado_lira.nombre }}</p>
             <p>Precio: {{ resultado_lira.precio }}</p>
             <p>Stock: {{ resultado_lira.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_lira.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -171,6 +255,13 @@
             <p>Nombre: {{ resultado_lira_full.nombre }}</p>
             <p>Precio: {{ resultado_lira_full.precio }}</p>
             <p>Stock: {{ resultado_lira_full.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_lira_full.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -180,6 +271,13 @@
             <p>Nombre: {{ resultado_faunimals.nombre }}</p>
             <p>Precio: {{ resultado_faunimals.precio }}</p>
             <p>Stock: {{ resultado_faunimals.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_faunimals.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
 
@@ -189,6 +287,13 @@
             <p>Nombre: {{ resultado_manchasSofi.nombre }}</p>
             <p>Precio: {{ resultado_manchasSofi.precio }}</p>
             <p>Stock: {{ resultado_manchasSofi.stock }}</p>
+            <div class="field is-grouped is-grouped-right">
+                <p class="control">
+                    <a class="button is-primary" href="{{ resultado_manchasSofi.url }}" target="_blank">
+                        Ir al producto
+                    </a>
+                </p>
+            </div>
         </div>
         {% endif %}
     </section>
